2004-06-18  David Malcolm  <david@davemalcolm.demon.co.uk>

	* xmldata.c (cong_command_add_required_sub_elements): 

	Fix for bug #144575 (entering new elements in documents lacking a DTD)

2004-06-17  David Malcolm  <david@davemalcolm.demon.co.uk>

	* Makefile.am: 
	
	Get comilation flags from configure.in, fixing bug 134747

	* xmledit.c, select.c, cong-source-view.c, cong-edit-find-and-replace.c, cong-document.c: 

	Warning fixes

2004-06-17 Nickolay V. Shmyrev <nshmyrev@yandex.ru>

	* cong-attribute-editor.c

	Added hook for using new attribute editor for languages

	* Makefile.am, cong-attribute-editor-lang.c, cong-attribute-editor-lang.h

	New files

2004-06-16 Nickolay V. Shmyrev <nshmyrev@yandex.ru>
    
	* xmldata.c, tree.c, cong-command.h: More correctly
	handle user cancel on addition of required children
	elements. See bug #135865 for details. Now
	the function is cong_command_add_required_sub_elements.
	* cong-document.c, cong-document.h: add new function
	cong_document_abort_command for end of command without
	applying it and placing it in history.
	* cong-util.c: Handle Cancel dialog responce in 
	query sub-elements dialog.
	* global.h, cong-util.c, plugin-relaxng.c :
	Cleanups for correct work with old gcc, remove 
	not existent function

2004-06-14  Nickolay V. Shmyrev <nshmyrev@yandex.ru>
 	
	* cong-menus.c: Added new menu item Help/Homepage
 	that will open www.conglomerate.org in browser.
 	See bug #134966 for details.

2004-06-14  David Malcolm  <dmalcolm@redhat.com>

	* cong-source-view.c: Fixed build problems

2004-06-11  David Malcolm  <david@davemalcolm.demon.co.uk>

	* cong-plugin.c: 

	Suppressed debug spewage

	* cong-node-properties-dialog.c: 

	Fixed warning

	* cong-source-view.c, cong-util.h, plugin-relaxng.c: 

	Generalised source view code to support any kind of textual
	code generated from the XML tree whenever it changes.  Began work
	on a "View RELAX NG in compact form" plugin

	* cong-file-properties.c: 